<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="391dp"
        android:layout_height="197dp"
        android:shrinkColumns="*"
        android:stretchColumns="2"
        app:layout_constraintBottom_toTopOf="@+id/buttonCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/wiersz1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/inpProducentView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/manufacturer" />

            <EditText
                android:id="@+id/editProducent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                tools:ignore="LabelFor" />
        </TableRow>

        <TableRow
            android:id="@+id/wiersz2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/inpModelView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/model" />

            <EditText
                android:id="@+id/editModel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                tools:ignore="LabelFor" />

        </TableRow>

        <TableRow
            android:id="@+id/wiersz3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/inpVersionView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/version"

                />

            <EditText
                android:id="@+id/editVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="number"
                tools:ignore="LabelFor" />
        </TableRow>

        <TableRow
            android:id="@+id/wiersz4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/inpWebView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/website"
                app:layout_constraintStart_toStartOf="parent" />


            <EditText
                android:id="@+id/editWeb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                tools:ignore="LabelFor" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/buttonWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/website"
        app:layout_constraintBottom_toBottomOf="@+id/buttonEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonEdit" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="350dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonEdit"
        app:layout_constraintStart_toEndOf="@+id/buttonWeb"
        app:layout_constraintTop_toBottomOf="@+id/buttonWeb"
        app:layout_constraintVertical_bias="0.774" />

    <Button
        android:id="@+id/buttonEdit"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginEnd="48dp"
        android:text="@string/edit"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonCancel" />


</androidx.constraintlayout.widget.ConstraintLayout>